...
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="0dN-M5-DIC"/>
                                                        <constraint firstAttribute="width" secondItem="rbF-QK-TIa" secondAttribute="height" multiplier="1:1" id="pdS-rH-jQ3"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="likeButtonOn"/>
                                                    <connections>
                                                        <action selector="likeButtonTapped:" destination="mZn-Sp-M8z" eventType="touchUpInside" id="OkK-R1-Ylp"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DSi-4D-A0i" userLabel="Data Label
                                                    <rect key="frame" x="24" y="179" width="101.5" height="16"/>
...
                                <connections>
                                    <action selector="didTapShareBotton:" destination="oX3-SA-D9Y" eventType="touchUpInside" id="1Xu-gw-X8K"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ADt-8w-OtD" userLabel="BackButton">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="H44-Tb-CLV"/>
                                    <constraint firstAttribute="width" constant="48" id="yRT-Ui-VIg"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_white_button"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0hF-so-x4A" userLabel="LoginButton">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor">
                                    <string key="name">
YP White (iOS)</string>
                                </color>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="MOY-1u-g2B"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gtj-DL-9Hj">
                                <rect key="frame" x="0.0" y="40" width="414" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
...
